[FIX] Div widths in forum posts (min-width needed for IE7 and FF3, etc.); other forum post fixes. Darkroom also needed text/bg contrast properties when transition CSS is used.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/2.0@13895 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/feb12.css
+++ b/styles/feb12.css
@@ -1315,7 +1315,7 @@ table.commentinfo {}
 	font-weight: normal}
 	
 * html .post .postbody {font-size: 1em}
-*:first-child+html .postbody {width: 50em !important}
+*:first-child+html .postbody {min-width: 100% !important}
 
 .postbody-content {padding: 8px }
 
@@ -1464,7 +1464,8 @@ span.commentstitle {
 
 .subcomment { margin-left: 10px}
 div.commentsedithelp { background: #ffcfcf; color: black; border: 1px solid #ff0000; text-align: center; font-weight: bold}
-textarea#editpost2 {font-size: .9em}
+textarea#editpost2 {font-size: 1em}
+
 /***** Categories *****/
 
 table.tcategpath {}
